--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,3 +188,70 @@ body {
     justify-content: center;
     gap: .3rem;
 }
+
+@media screen and (max-width: 906px) {
+    .container {
+        width: 97%;
+        height: 35rem;
+        flex-direction: column;
+    }
+    
+    .container img {
+        width: 100%;
+        height: 15%;
+    }
+    
+    .container-form {
+        margin-top: 2rem;
+        width: 100%;
+    }
+
+    .container-form form {
+        width: 100%;
+    }
+    
+    .container-form form > h2 {
+        font-size: 1.5rem;
+    }
+    
+    .container-form form > span {
+        font-size: 0.8rem;
+    }
+
+    .container-form form > .form-row-one {
+        gap: 0.8rem;
+        display: flex;
+    }
+    
+    .container-form form > .form-row-one > div {
+        flex: 1;
+    }
+    
+    .container-form form > .form-row-one > div > input {
+        text-indent: 3px;
+        width: 100%;
+    }
+    
+    .container-form form > .form-row-two > div > input {
+        text-indent: 3px;
+    }
+    
+    .container-form form > .form-row-tree > div > input {
+        text-indent: 3px;
+    }
+
+    .container-form form > .row-btn > button {
+        padding: 0.4rem;
+        font-size: 0.8rem;
+    }
+
+    .container-form form > .opcion > button {
+        padding: 0.7rem;
+        font-size: 0.7rem;
+    }
+
+    .container-form form > .opcions {
+        font-size: 0.8rem;
+    }
+
+}
