--- a/src/css/style.css
+++ b/src/css/style.css
@@ -200,6 +200,10 @@ body {
         width: 100%;
         height: 15%;
     }
+
+    img.google-img {
+        height: 100%;
+    }
     
     .container-form {
         margin-top: 2rem;
